# Music_player-of-Trung

./: README.md
TrungNV88/: CMakeLists.txt  High Sequence.drawio  SRS_UseCase_MockProject.docx  low_level_use_case_specification.docx
TrungNV88/include/controller/: HardwareController.hpp  LibraryController.hpp  PlaybackController.hpp  SettingsController.hpp  VideoController.hpp
TrungNV88/include/core/: IHardwareDevice.hpp  IMediaPlayer.hpp  ITrack.hpp
TrungNV88/include/model/: LibraryScanner.hpp  MetadataExtractor.hpp  MockSerialTransceiver.hpp  PlaylistManager.hpp  SerialTransceiver.hpp
TrungNV88/include/playback/: AudioEngine.hpp  VideoEngine.hpp
TrungNV88/include/utils/: Config.hpp
TrungNV88/src/: main.cpp
TrungNV88/src/controller/: HardwareController.cpp  LibraryController.cpp  PlaybackController.cpp  SettingsController.cpp  VideoController.cpp
TrungNV88/src/model/: LibraryScanner.cpp  MetadataExtractor.cpp  MockSerialTransceiver.cpp  PlaylistManager.cpp  SerialTransceiver.cpp
TrungNV88/src/playback/: AudioEngine.cpp  VideoEngine.cpp
TrungNV88/src/utils/: Config.cpp
TrungNV88/src/view/: VideoFrameProvider.cpp  VideoFrameProvider.hpp  main.qml  qml.qrc
TrungNV88/tests/: playlist_tests.cpp
